[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
monitor-core = { path = "../monitor-core" }
serde = { version = "1.0.215", features = ["derive"] }
tokio-stream = "0.1.16"
futures-util = "0.3.31"
serial_test = "3.2.0"

[dev-dependencies]
serial_test = "3.2.0"
tokio-test = "0.4.4"
