[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-stream = { version = "0.1.16", features = ["fs", "full"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
monitor = { path = "../monitor" }
futures-util = "0.3.31"
serial_test = "3.2.0"
thiserror = "2.0.3"
tracing = "0.1.41"
anyhow = "1.0.93"
axum = "0.7.9"
tracing-subscriber = "0.3.19"

[dev-dependencies]
serial_test = "3.2.0"
tokio-test = "0.4.4"
